# os-system-agent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
config/: SOUL.example.md  alert-rules.dinastia.example.yml  alert-rules.example.yml  openclaw.example.json  server232.ssh_config.example
config/skills/: estado-etl.SKILL.md  estado.SKILL.md
config/systemd/: dinastia-agent-alerts.service.example  dinastia-agent-alerts.timer.example  dinastia-agent-daily.service.example  dinastia-agent-daily.timer.example  os-system-agent-alerts.service.example  os-system-agent-alerts.timer.example  os-system-agent-daily.service.example  os-system-agent-daily.timer.example
docs/: REQUIREMENTS_OS_SYSTEM_AGENT.md  agent-security-hardening.md  deploy-multiempresa.md  openclaw-phase1-runbook.md  operations-runbook.md  phase-roadmap.md  security-runbook.md
evals/: README.md
evals/cases/: redaction_cases.yaml  severity_cases.yaml
scripts/: alert_incidents.py  check_etl_freshness.py  collect_etl_status.py  healthcheck_server232.sh  send_daily_report.py  send_telegram_alert.py
specs/001-os-system-agent/: plan.md  spec.md  tasks.md
specs/002-estado-etl-pull/: plan.md  spec.md  tasks.md
specs/003-proactive-alerts/: spec.md  tasks.md
specs/004-multi-empresa-ejecucion/: plan.md  spec.md  tasks.md
src/os_system_agent/: __init__.py  alerting.py  catalog.py  collector.py  config.py  mcp_server.py  notify.py  redaction.py  severity.py  ssh_client.py
src/os_system_agent/monitors/: __init__.py  freshness.py  systemd.py
tests/: test_alert_incidents.py  test_alerting.py  test_catalog.py  test_chat_report.py  test_collector.py  test_daily_report.py  test_evals.py  test_freshness.py  test_mcp_estado.py  test_redaction.py  test_send_report.py  test_severity.py  test_ssh_allowlist.py  test_systemd.py
(+3 files in other folders)
