[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "os-system-agent"
version = "0.1.0"
description = "Controlled OpenClaw + Claude Code agent for safe, auditable ETL monitoring and approved operations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Juan Manuel Velasquez" }]
keywords = [
  "agentops",
  "llmops",
  "etl",
  "monitoring",
  "observability",
  "openclaw",
  "claude-code",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Monitoring",
]
dependencies = ["pyyaml>=6.0"]

[project.urls]
Homepage = "https://github.com/JuanMa0912/os-system-agent"
Repository = "https://github.com/JuanMa0912/os-system-agent"
Issues = "https://github.com/JuanMa0912/os-system-agent/issues"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/os_system_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, S bandit (security)
select = ["E", "F", "I", "UP", "B", "S", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]  # asserts and fake secrets are expected in tests
# The SSH call is guarded by assert_read_only(); the subprocess is intentional.
"src/os_system_agent/ssh_client.py" = ["S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
files = ["src"]
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
